# secbot

./: .dockerignore  .env.backup  .env.example  .gitignore  .npmrc.example  .prettierignore  .pypirc.example  AGENT.md  AGENTS.md  AI Agent应用开发岗 面试高频问题全集.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README_CN.md  README_EN.md  TEST_REPORT.md  UI-DESIGN-AND-INTERACTION.md  build.bat  build.sh  commit_messages.txt  commit_plan.txt  config.py  conftest.py  docker-compose.prod.yml  docker-compose.yml  env.example  eslint.config.mjs  generate_report.py  go.mod  go.sum  hackbot.spec  main.py  manual_test_runner.py  msg1.txt  msg2.txt  (+16 more)
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
agents/: __init__.py  base.py  hackbot_agent.py  langchain_agent.py  planner_agent.py  qa_agent.py  summary_agent.py  superhackbot_agent.py  tool_calling_agent.py  web_research_agent.py
app/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
attack_chain/: __init__.py  attack_chain.py  exploitation.py  post_exploitation.py  reconnaissance.py
cmd/secbot/: main.go
config/: __init__.py  config.go
controller/: __init__.py  controller.py  network_discovery.py  remote_control.py  session_manager.py
core/: executor.py  models.py  secbot_config.py  session.py
core/agents/: base.py  coordinator_agent.py  hackbot_agent.py  planner_agent.py  qa_agent.py  router.py  specialist_agents.py  summary_agent.py  superhackbot_agent.py  tool_calling_agent.py  web_research_agent.py
core/attack_chain/: __init__.py  attack_chain.py  exploitation.py  reconnaissance.py
core/memory/: database_memory.py  manager.py
core/patterns/: react.py  security_react.py
core/vuln_db/: schema.py  vuln_db_service.py
crawler/: __init__.py  base.py  crawler_tool.py  extractor.py  realtime.py  scheduler.py
database/: __init__.py  manager.py  models.py
defense/: __init__.py  defense_manager.py  info_collector.py  report_generator.py
deploy/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
design-paradigms/: commit-conventions.md
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  config.ts  index.css  types.ts  useSSE.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: API.md  APP.md  CHANGELOG.md  DATABASE_GUIDE.md  DEPLOYMENT.md  DOCKER_SETUP.md  LLM_PROVIDERS.md  MONOREPO_MIGRATION.md  NODE_SETUP.md  OLLAMA_SETUP.md  PROMPT_GUIDE.md  PYPI_PUBLISH.md  QUICKSTART.md  RELEASE.md  RELEASE_v1.0.0.md  RELEASE_v1.0.1.md  SKILLS_AND_MEMORY.md  SPEECH_GUIDE.md  SQLITE_SETUP.md  TOOL_EXTENSION.md  TS_MIGRATION_STATUS.md  UI-DESIGN-AND-INTERACTION.md  VIRTUAL_TEST_ENVIRONMENT.md  architecture.txt  opencode-scroll-and-scrollbar.md  简历-项目经历-Secbot.md  项目经历1-Secbot.md
docs/design-paradigms/: README.md  cli-and-dependencies.md  config-and-env.md
examples/: crawler_example.py  prompt_example.py  system_example.py  vector_memory_example.py
exploit/: __init__.py  exploit_engine.py  network_exploits.py  post_exploitation.py  web_exploits.py
hackbot/: __init__.py  cli.py  launch_tui.py  run_interactive.py
hackbot_config/: __init__.py
internal/agent/: base.go  coordinator.go  explore.go  hackbot.go  planner.go  router.go  specialists.go  summary.go
internal/cli/: printer.go
internal/contextmgr/: context.go
internal/database/: manager.go  models.go
internal/llm/: provider.go
internal/memory/: episodic.go  longterm.go  manager.go  store.go
internal/models/: models.go
internal/patterns/: planning.go  react.go  reflection.go  routing.go  security_react.go
internal/prompts/: manager.go  (+1 more)
langchaingo-starter-main/: .env.example  .gitignore  Makefile  README.md  go.mod  go.sum
m_bot/: __init__.py  cli.py
memory/: __init__.py  base.py  database_memory.py  vector_memory.py
mobile/: package-lock.json  package.json  tsconfig.json
npm-bin/: secbot-mcp.js  secbot-server.js  secbot.js
patterns/: __init__.py  react.py  security_react.py
payloads/: __init__.py  payload_generator.py  web_payloads.py
prompts/: __init__.py  chain.py  manager.py
router/: __init__.py  chat.py  database.py  defense.py  dependencies.py  main.py  memory.py  network.py  schemas.py  sessions.py  system.py  tools.py
scanner/: __init__.py  attack_tester.py  port_scanner.py  scheduler.py  service_detector.py  vulnerability_scanner.py
scripts/: apply-github-packages-name.js  build.bat  build.sh  build_release.bat  build_release.sh  dev_server.sh  main.py  run-product.js  start-cli.bat  start-cli.ps1  start-latest.bat  start-latest.ps1  start-ts-tui.ps1  start-ts-tui.sh  start_latest.js  start_stack.js  verify_release_package.js
secbot_agent/: __init__.py
secbot_cli/: __init__.py  cli.py  launch_tui.py  runner.py
server/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
skills/: __init__.py  injector.py  loader.py  workflow.py
system/: __init__.py  commands.py  controller.py  detector.py
terminal-ui/: README.md  package-lock.json  package.json  run-tui.bat  tsconfig.json
test/: test_debug.py  test_think.py
tests/: __init__.py  disabled_test_api.py  disabled_test_db_connection.py  disabled_test_debug.py  disabled_test_sqlite_connection.py  disabled_test_think.py  test_agents.py  test_all_tools.py  test_browser_tool.py  test_db_connection.py  test_interactive_response.py  test_monorepo_integration.py  test_release.py  test_sqlite_connection.py
tools/: __init__.py  base.py  command_tool.py  crawler_tool.py  registry.py  system_tool.py  web_search.py
tui/: __init__.py  models.py  session_manager.py  utils.py
utils/: __init__.py  audit.py  config_storage.py  confirmation.py  context_info.py  embeddings.py  enhanced_input.py  error_mapper.py  event_bus.py  generate_report.py  hackbot_banner.py  llm_http_fallback.py  loading.py  logger.py  manual_test_runner.py  model_selector.py  opencode_layout.py  output_components.py  release_docs.py  root_policy.py  slash_commands.py  speech.py  tool_caller.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+1036 files in other folders)
