[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackbot"
version = "1.2.3"
description = "Hackbot: AI-powered automated penetration testing robot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "赵明俊", email = "zhaomingjun@example.com"}
]
keywords = ["ai", "agent", "security", "automation", "llm", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.23",
    "langchain-experimental>=0.0.50",
    "langchain-ollama>=0.1.0",
    "langchain-openai>=0.2.0",
    "aiohttp>=3.9.1",
    "httpx>=0.26.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "selenium>=4.17.0",
    "playwright>=1.41.0",
    "chromadb>=0.4.22",
    "faiss-cpu>=1.7.4",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.25",
    "psutil>=5.9.0",
    "distro>=1.8.0",
    "loguru>=0.7.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "tiktoken>=0.5.2",

    "faster-whisper>=1.0.0",
    "gtts>=2.5.0",
    "pyttsx3>=2.90",
    "pydub>=0.25.1",
    "paramiko>=3.4.0",
    "pywinrm>=0.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
hackbot = "hackbot.cli:app"

[project.urls]
Homepage = "https://github.com/iammm0/hackbot"
Documentation = "https://github.com/iammm0/hackbot/docs"
Repository = "https://github.com/iammm0/hackbot"
Issues = "https://github.com/iammm0/hackbot/issues"

[tool.setuptools]
packages = [
    "hackbot",
    "agents",
    "attack_chain",
    "controller",
    "crawler",
    "database",
    "defense",
    "exploit",
    "memory",
    "patterns",
    "payloads",
    "prompts",
    "scanner",
    "system",
    "tools",
    "utils",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.txt", "*.md"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]






[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"